# PersonalAssistant

./: .gitignore  README.md  start.sh
.agents/: AGENTS.md
backend/: .env.example  .gitignore  README.md  esbuild.config.js  mcp-config.json  package-lock.json  package.json
backend/data/: metrics.json
backend/data/knowledge_catalog/: developer_preferences.md  mcp_integrations.md  routines_and_goals.md  system_environment.md  user_profile.md
backend/mcps/mcp-video-converter/: test_client.py  test_http_client.py  test_mcp_server.py
backend/mcps/terminal-mcp/: package.json
backend/mcps/youtube-mcp/: .gitignore  requirements.txt  youtube_server.py
backend/scripts/: migrateToMongo.js
backend/src/: server.js
backend/src/config/: constants.js  env.js  mongodb.js  system_prompt.md
backend/src/controllers/: authController.js  chatController.js  configController.js  envController.js  logsController.js  mcpConfigController.js  mcpStatusController.js  metricsController.js  personalDbController.js  prebuiltFormsController.js  skillsController.js  systemPromptController.js  toolsController.js
backend/src/mcp/: mcpManager.js
backend/src/okf/: okfEngine.js
backend/src/orchestrator/: agent.js  commonFunctions.js  (+4 more)
frontend/: .gitignore  README.md  build.sh  index.html  main.swift  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  main.jsx
mcps/mac-mcp/: .gitignore  mac_server.py  pyproject.toml  test_mac_mcp.py
mcps/mac-mcp/tools/: __init__.py  app_integrations.py  app_window.py  applescript.py  filesystem.py  finder.py  input.py  media.py  process.py  screenshot_ui.py  system.py  timer_reminders.py
mcps/mcp-video-converter/: Dockerfile  Dockerfile.debug  README.md  convert_webm_standalone.py  instructions.md  smithery.yaml  video_convert_mcp.py
mcps/mcp-video-converter/mcp-video-converter/: .gitignore  0_README.md  CONTRIBUTING.md  Dockerfile  package.json  pyproject.toml  smithery.yaml
mcps/mcp-video-converter/mcp-video-converter/.github/: README.md
mcps/mcp-video-converter/mcp-video-converter/.github/profile/: README.md
mcps/mcp-video-converter/mcp-video-converter/.github/workflows/: ci.yml
mcps/terminal-mcp/: index.js  package-lock.json
mcps/youtube-mcp/: README.md  pyproject.toml  youtube_server.py
mcps/youtube-mcp/youtube_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
orb/: README.md  index.html  package-lock.json  package.json
orb/src/: App.jsx  index.css
(+143 files in other folders)
