[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mac-mcp"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for comprehensive macOS automation"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.3.0",
    "psutil>=5.9.0",
    "Pillow>=10.0.0",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'"
]

[tool.windsurf.mcp]
name = "mac"
description = "macOS Workstation Control & Automation MCP Server"

[tool.windsurf.mcp.runtime]
type = "python"
module = "mac_server"
entry = "mcp"
